After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747604 - Fix build of gtk/inspector/css-node-tree.c
Fix build of gtk/inspector/css-node-tree.c
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other Windows
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-04-10 07:48 UTC by Fan, Chun-wei
Modified: 2015-04-10 09:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gtk/inspsector/css-node-tree.c: Use g_ascii_strcasecmp() (1.08 KB, patch)
2015-04-10 07:50 UTC, Fan, Chun-wei
committed Details | Review

Description Fan, Chun-wei 2015-04-10 07:48:39 UTC
Hi,

The recent addition of gtk/inspector/css-node-tree.c included strings.h and used strcasecmp(), which were not universally available, breaking builds on compilers that do not have them.

I will enclose a simple patch to fix this on such compilers.

With blessings, thank you!
Comment 1 Fan, Chun-wei 2015-04-10 07:50:27 UTC
Created attachment 301260 [details] [review]
gtk/inspsector/css-node-tree.c: Use g_ascii_strcasecmp()

Hi,

This is the patch that fixes the build by using g_ascii_strcasecmp() instead of including strings.h and using strcasecmp().

With blessings, thank you!
Comment 2 Emmanuele Bassi (:ebassi) 2015-04-10 09:02:36 UTC
Review of attachment 301260 [details] [review]:

Looks good to me.
Comment 3 Fan, Chun-wei 2015-04-10 09:19:30 UTC
Hi Emmanuele,

Thanks for the review, the patch was pushed as f53737a.

With blessings, thank you!